--- a/latex/macros/macros.tex
+++ b/latex/macros/macros.tex
@@ -18,7 +18,7 @@
 \newcommand{\displacement}{\ensuremath{\boldsymbol{h}}}
 \newcommand{\distance}{\ensuremath{h}}
 \newcommand{\distMatrix}{\ensuremath{\boldsymbol{H}}}
-\newcommand{\docMain}{\texttt{main.pdf}}
+\newcommand{\docMain}{\hltexttt{main.pdf}}
 \newcommand{\docSetup}{\hltexttt{setup.pdf}}
 \newcommand{\docVariogram}{\hltexttt{variogram.pdf}}
 \newcommand{\docCholesky}{\hltexttt{cholesky.pdf}}
@@ -64,6 +64,7 @@
 \newcommand{\rangeY}{\scriptParam{range\_y}}
 \newcommand{\reservoirThickness}{\ensuremath{\mathcal{W}}}
 \newcommand{\scriptParam}[1]{\ensuremath{\hltexttt{#1}}}
+\newcommand{\shellCommand}[1]{\ensuremath{\text{\hltexttt{#1}}}}
 \newcommand{\stdev}{\ensuremath{\sigma}}
 \newcommand{\tiltAngle}{\ensuremath{\alpha}}
 \newcommand{\unit}[1]{\ensuremath{[\si{#1}]}}
