--- a/latex/main/main.tex
+++ b/latex/main/main.tex
@@ -78,7 +78,9 @@ surfaces. It also briefly mention how to run the VESA simulator.
 It does not describe the actual machine learning procedure. 
 
 \section{Documentation}
-This document \docMain{} gives an overview of the main Python script,
+To create the PDF documentation files from the \LaTeX{} source files,
+run \shellCommand{make docs} from the top folder. This will install the documentation files in the \docsFolder{}.
+The current document, \docMain{}, gives an overview of the main Python script,
 further documentation is available in the \docsFolder{} folder:  
 \begin{itemize}
 \item \docSetup {} : describes the top surface model and its parameters in
